# keyshadow

./: .gitignore  LICENSE  README.md
src/crypto/ciphers/: aes_ecb.cpp  aes_ecb.h  cipher.h
src/crypto/core/: aes.cpp  aes.h  crc32.h  pbkdf2.cpp  pbkdf2.h  textprocessor.h
src/crypto/hash_functions/: hash_function.h  pbkdf2_hmac_sha512.cpp  pbkdf2_hmac_sha512.h
src/encprocessor/core/: encdata.cpp  encdata.h  encfile.cpp  encfile.h  encformat.h
src/encprocessor/crypto/: aes.cpp  aes.h
src/fortest/: functions.h
src/keyshadow/: keyshadow.cpp  keyshadow.h  mainloop.cpp  mainloop.h
src/keyshadow/core/: keyshadow.cpp  keyshadow.h  mainloop.cpp
src/mainloop/: command_processor.cpp  command_processor.h  main.cpp
src/mainloop/database/: encrypted_database.cpp  encrypted_database.h  encrypted_file.cpp  encrypted_file.h  file_opener.cpp  file_opener.h
src/noteprocessor/: README.md  factory.cpp  factory.h  writable.cpp  writable.h  writablearray.cpp  writablearray.h  writableloginnote.cpp  writableloginnote.h
src/tests/: crypto.h  main.cpp  test.cpp  test_read_write.cpp
tests/: encprocessor_tests.cpp  keyshadow_tests.cpp  main.cpp  noteprocessor_tests.cpp
tmp/: CMakeLists.txt
